RESOLVED FIXED87483
[Qt] Broken controls rendering when transform is applied.
https://bugs.webkit.org/show_bug.cgi?id=87483
Summary [Qt] Broken controls rendering when transform is applied.
alan
Reported 2012-05-25 03:08:02 PDT
When transform is applied, the controls are rendered taking transforming into account even when it is not needed (needed only for scaling to not to pixel scale)
Attachments
Patch (4.67 KB, patch)
2012-05-25 03:34 PDT, alan
no flags
alan
Comment 1 2012-05-25 03:34:12 PDT
WebKit Review Bot
Comment 2 2012-05-25 05:18:18 PDT
Comment on attachment 144032 [details] Patch Clearing flags on attachment: 144032 Committed r118514: <http://trac.webkit.org/changeset/118514>
WebKit Review Bot
Comment 3 2012-05-25 05:18:22 PDT
All reviewed patches have been landed. Closing bug.
Kenneth Rohde Christiansen
Comment 4 2012-05-26 01:42:37 PDT
paiting? That file name has a spelling error! :-)
Note You need to log in before you can comment on or make changes to this bug.