[Qt] Broken controls rendering when transform is applied. https://bugs.webkit.org/show_bug.cgi?id=87483

Patch by Zalan Bujtas <zbujtas@gmail.com> on 2012-05-25
Reviewed by Simon Hausmann.

.:

* ManualTests/qt/control_paiting_with_transforms.html: Added.

Source/WebCore:

Use only the scaling transform value to determine the size of
the control to be drawn. When other transforms present such as
rotate or skew, ignore them, unless scaling also involved. In
that case, calculate the scaling value out of the transformation.

* ManualTests/qt/control_paiting_with_transforms.html: Added.

* platform/qt/RenderThemeQtMobile.cpp:
(WebCore::painterScale):
(WebCore):
(WebCore::StylePainterMobile::sizeForPainterScale):

Canonical link: https://commits.webkit.org/105266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118514 268f45cc-cd09-0410-ab3c-d52691b4dbfc